--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -44,6 +44,7 @@ error.generatedataset   = S'ha produ\u00EFt un error en construir el conjunt de 
 error.host              = No es pot connectar amb l'amfitri\u00F3.
 error.login             = Nom d'usuari o contrasenya incorrectes.
 error.malformedurl      = URL mal format. Heu afegit el protocol http (s)?
+error.nocacheavaible    = Sense mem\u00F2ria cau es troba per a aquest usuari i de sistema principal
 error.nocourse          = Heu de seleccionar un curs.
 error.saveallcharts     = No es poden exportar gr\u00E0fics.
 error.savechart         = Error en desar el diagrama.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Compleci\u00F3 de l'activitat
 html.btnBoxPlot         = Diagramacaja
 html.btnBoxPlotGroup    = Boxplot de Grups
 html.btnCalificaciones  = Graus
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Els arxius locals
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dies
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Destacats
 text.future             = Future
 text.hours              = Hores
@@ -618,6 +622,7 @@ text.minutes            = Minuts
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Sense coincid\u00E8ncies
+text.pass               = Pass
 text.past               = Past
 text.recent             = Recents
 text.seconds            = Segons
