--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Fehler beim Erstellen des Datasets.
 error.host              = Verbindung zum Host nicht m\u00F6glich.
 error.login             = Benutzername oder Passwort falsch.
 error.malformedurl      = Schlecht geformte URL. Haben Sie http (s) -Protokoll hinzugef\u00FCgt?
+error.nocacheavaible    = Kein Cache f\u00FCr diesen Benutzer und Host gefunden
 error.nocourse          = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
 error.saveallcharts     = Diagramme k\u00F6nnen nicht exportiert werden.
 error.savechart         = Fehler beim Speichern des Diagramms.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Aktivit\u00E4tsabschluss
 html.btnBoxPlot         = BoxPlot
 html.btnBoxPlotGroup    = Gruppen-Boxplot
 html.btnCalificaciones  = Noten
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Lokale Dateien
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Tage
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Als Favorit markiert
 text.future             = Future
 text.hours              = Std
@@ -618,6 +622,7 @@ text.minutes            = Protokoll
 text.moodle             = Moodle: 
 text.never              = noch nie
 text.nousers            = Kein Zufall
+text.pass               = Pass
 text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
 text.seconds            = Sekunden
