--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Error en la construcci\u00F3n del dataset.
 error.host              = No se ha podido conectar con el host.
 error.login             = Usuario y/o contrase\u00F1a incorrectos.
 error.malformedurl      = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
+error.nocacheavaible    = No se encunetra cach\u00E9 para este usuario y host
 error.nocourse          = Debe seleccionar un curso.
 error.saveallcharts     = No se han podido exportar los gr\u00E1ficos.
 error.savechart         = Error al gruardar el gr\u00E1fico.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Finalizaci\u00F3n Actividad
 html.btnBoxPlot         = Boxplot
 html.btnBoxPlotGroup    = BoxPlot de Grupos
 html.btnCalificaciones  = Calificaciones
+html.btnCalificationBar = Calificaciones %
 html.btnCumLine         = Acumulados
 html.btnGroupMean       = Estad\u00EDsticas de grupo(s)
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Archivos locales
 text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.days               = d\u00EDas
+text.empty              = S.C
+text.fail               = Suspenso
 text.favorite           = Destacados
 text.future             = Futuros
 text.hours              = horas
@@ -618,6 +622,7 @@ text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = No hay coincidencias
+text.pass               = Aprobado
 text.past               = Pasados
 text.recent             = Recientes
 text.seconds            = segundos
