--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Erreur lors de la construction du jeu de donn\u00E9es.
 error.host              = Impossible de se connecter avec l'h\u00F4te.
 error.login             = Mauvais nom d'utilisateur ou mot de passe.
 error.malformedurl      = URL mal form\u00E9e. Avez-vous ajout\u00E9 le protocole http (s)?
+error.nocacheavaible    = Aucun cache est trouv\u00E9 pour cet utilisateur et l'h\u00F4te
 error.nocourse          = Vous devez choisir un cours.
 error.saveallcharts     = Impossible d'exporter des graphiques.
 error.savechart         = Erreur d'enregistrement du graphique.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Ach\u00E8vement d'activit\u00E9s
 html.btnBoxPlot         = Boxplot
 html.btnBoxPlotGroup    = Boxplot de Groupe
 html.btnCalificaciones  = Grades
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Fichiers locaux
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Journ\u00E9es
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Favoris\r\n
 text.future             = Future
 text.hours              = Heures
@@ -618,6 +622,7 @@ text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
 text.nousers            = Pas de co\u00EFncidences
+text.pass               = Pass
 text.past               = Past
 text.recent             = R\u00E9cente
 text.seconds            = Secondes
