--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Errore durante la creazione del set di dati.
 error.host              = Impossibile connettersi con l'host.
 error.login             = Username o password errati.
 error.malformedurl      = URL mal formato. Hai aggiunto il protocollo http (s)?
+error.nocacheavaible    = Nessun cache \u00E8 trovato per questo utente e di accoglienza
 error.nocourse          = Devi selezionare un corso.
 error.saveallcharts     = Impossibile esportare i grafici.
 error.savechart         = Errore durante il salvataggio del grafico.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Completamento attivit\u00E0
 html.btnBoxPlot         = Boxplot
 html.btnBoxPlotGroup    = Diagramma di Gruppo
 html.btnCalificaciones  = Gradi
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = File locali
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = giorni
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Preferiti
 text.future             = Future
 text.hours              = Ore
@@ -618,6 +622,7 @@ text.minutes            = Minuti
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Nessuna coincidenza
+text.pass               = Pass
 text.past               = Past
 text.recent             = Recente
 text.seconds            = secondi
