--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Erro ao construir o conjunto de dados.
 error.host              = N\u00E3o \u00E9 poss\u00EDvel conectar-se ao host.
 error.login             = Nome de usu\u00E1rio ou senha incorretos.
 error.malformedurl      = URL mal formado. Voc\u00EA adicionou o protocolo http (s)?
+error.nocacheavaible    = Sem cache \u00E9 encontrado para este usu\u00E1rio e hospedeiro
 error.nocourse          = Voc\u00EA tem que selecionar um curso.
 error.saveallcharts     = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
 error.savechart         = Erro ao salvar gr\u00E1fico.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Conclus\u00E3o das atividades
 html.btnBoxPlot         = Boxplot
 html.btnBoxPlotGroup    = Boxplot do Grupo
 html.btnCalificaciones  = Notas
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Ficheiros locais
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dias
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Com estrela
 text.future             = Future
 text.hours              = Horas
@@ -618,6 +622,7 @@ text.minutes            = Minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = Sem coincid\u00EAncias
+text.pass               = Pass
 text.past               = Past
 text.recent             = Recentes
 text.seconds            = Segundos
