--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -44,6 +44,7 @@ error.generatedataset   = Error building the dataset.
 error.host              = Can't connect with host.
 error.login             = Wrong Username or password.
 error.malformedurl      = Badly formed URL. Did you add http(s) protocol?
+error.nocacheavaible    = No cache is found for this user and host
 error.nocourse          = You have to select a course.
 error.saveallcharts     = Can't export charts.
 error.savechart         = Error saving chart.
@@ -59,6 +60,7 @@ html.btnActivitiesTable = Activity Completion
 html.btnBoxPlot         = Boxplot
 html.btnBoxPlotGroup    = Group BoxPlot
 html.btnCalificaciones  = Grades
+html.btnCalificationBar = Grades %
 html.btnCumLine         = Cumulative Log
 html.btnGroupMean       = Group(s) Stats
 html.btnHeatmap         = Heatmap
@@ -609,6 +611,8 @@ text.cache              = Local Files
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Days
+text.empty              = N.A
+text.fail               = Fail
 text.favorite           = Starred
 text.future             = Future
 text.hours              = Hours
@@ -618,6 +622,7 @@ text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Never
 text.nousers            = No coincidences
+text.pass               = Pass
 text.past               = Past
 text.recent             = Recent
 text.seconds            = Seconds
