Change choice box for role, group and last activity to check combo box

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Clar
-btn.enter  = Introdu\u00EFu
-btn.filter = Aplicar el filtre de dates
-btn.group  = Grup
-btn.remove = Netejar
-btn.rol    = Rol
-btn.type   = Escriviu
+ACTIVITIES_TABLE = Compleci\u00F3 de l'activitat
+
+BOXPLOT = Diagramacaja
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Graus
+
+GROUP_BOXPLOT = Boxplot de Grups
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = L\u00EDnies
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = Barres Apilades
+
+VIOLIN = Violin
+
+btn.clear    = Clar
+btn.enter    = Introdu\u00EFu
+btn.filter   = Aplicar el filtre de dates
+btn.group    = Grup
+btn.remove   = Netejar
+btn.rol      = Rol
+btn.type     = Escriviu
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = Llegenda
+
+btnMean = General Stats
 
 chart.mean                = Significar
 
@@ -55,23 +87,6 @@ error.userdata          = Error en recuperar les dades de l'usuari.
 header.passwordChangedMessage   = S'ha detectat la contrasenya
 header.passwordDateTime         = Contrasenya de data anterior:
 header.passwordIncorrectMessage = Contrasenya incorrecta
-
-html.btnActivitiesTable = Compleci\u00F3 de l'activitat
-html.btnBoxPlot         = Diagramacaja
-html.btnBoxPlotGroup    = Boxplot de Grups
-html.btnCalificaciones  = Graus
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Llegenda
-html.btnLine            = L\u00EDnies
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = Barres Apilades
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = \u00DAltima connexi\u00F3:
 label.categoryitem                = Categoria / article:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = XML grade expo
 log.event.zip_archive_of_folder_downloaded                      = S'ha descarregat l'arxiu Zip o la carpeta
 
 menu.about          = Quant a l'aplicaci\u00F3
+menu.changeconfig   = Change configuration
 menu.changesubject  = Canvia el tema
 menu.clearselection = Neteja la selecci\u00F3
 menu.edit           = Edita
