--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = klar
-btn.enter  = Eingeben
-btn.filter = Datumsfilter anwenden
-btn.group  = Gruppe
-btn.remove = Aufr\u00E4umen
-btn.rol    = Rol
-btn.type   = Art
+ACTIVITIES_TABLE = Aktivit\u00E4tsabschluss
+
+BOXPLOT = BoxPlot
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Noten
+
+GROUP_BOXPLOT = Gruppen-Boxplot
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = Linien
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = Stacked Bar
+
+VIOLIN = Violin
+
+btn.clear    = klar
+btn.enter    = Eingeben
+btn.filter   = Datumsfilter anwenden
+btn.group    = Gruppe
+btn.remove   = Aufr\u00E4umen
+btn.rol      = Rol
+btn.type     = Art
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = Legende
+
+btnMean = General Stats
 
 chart.mean                = Bedeuten
 
@@ -55,23 +87,6 @@ error.userdata          = Fehler beim Wiederherstellen der Benutzerdaten.
 header.passwordChangedMessage   = Gefunden wurde ein ge\u00E4ndertes Passwort
 header.passwordDateTime         = Passwort f\u00FCr das vorherige Datum:
 header.passwordIncorrectMessage = Falsches Passwort
-
-html.btnActivitiesTable = Aktivit\u00E4tsabschluss
-html.btnBoxPlot         = BoxPlot
-html.btnBoxPlotGroup    = Gruppen-Boxplot
-html.btnCalificaciones  = Noten
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Legende
-html.btnLine            = Linien
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = Stacked Bar
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = Letzte Verbindung:
 label.categoryitem                = Kategorie / Gegenstand:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = Bewertung als 
 log.event.zip_archive_of_folder_downloaded                      = Verzeichnis wurde heruntergeladen
 
 menu.about          = \u00DCber die Bewerbung
+menu.changeconfig   = Change configuration
 menu.changesubject  = Das Thema wechseln
 menu.clearselection = Auswahl aufheben
 menu.edit           = Bearbeiten
