--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Clear
-btn.enter  = Enter
-btn.filter = Apply dates filter
-btn.group  = Group
-btn.remove = Clean
-btn.rol    = Rol
-btn.type   = Type
+ACTIVITIES_TABLE = Activity Completion
+
+BOXPLOT = Boxplot
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Grades
+
+GROUP_BOXPLOT = Group BoxPlot
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = Lines
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = Stacked Bar
+
+VIOLIN = Violin
+
+btn.clear    = Clear
+btn.enter    = Enter
+btn.filter   = Apply dates filter
+btn.group    = Group
+btn.remove   = Clean
+btn.rol      = Rol
+btn.type     = Type
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = Legend
+
+btnMean = General Stats
 
 chart.mean                = Mean
 
@@ -55,23 +87,6 @@ error.userdata          = Error when recovering user data.
 header.passwordChangedMessage   = Detected was password changed
 header.passwordDateTime         = Previous date password: 
 header.passwordIncorrectMessage = Password incorrect
-
-html.btnActivitiesTable = Activity Completion
-html.btnBoxPlot         = Boxplot
-html.btnBoxPlotGroup    = Group BoxPlot
-html.btnCalificaciones  = Grades
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Legend
-html.btnLine            = Lines
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = Stacked Bar
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = Last connection:
 label.categoryitem                = Category/Item:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = XML grade expo
 log.event.zip_archive_of_folder_downloaded                      = Zip archive of folder downloaded
 
 menu.about          = About application
+menu.changeconfig   = Change configuration
 menu.changesubject  = Change Subject
 menu.clearselection = Clear selection
 menu.edit           = Edit
