--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Borrar
-btn.enter  = Entrar
-btn.filter = Aplicar filtro de fechas
-btn.group  = Grupo
-btn.remove = Limpiar
-btn.rol    = Rol
-btn.type   = Tipo
+ACTIVITIES_TABLE = Finalizaci\u00F3n Actividad
+
+BOXPLOT = Boxplot
+
+CALIFICATION_BAR = Calificaciones %
+
+CUM_LINE = Acumulados
+
+GRADE_REPORT_TABLE = Calificaciones
+
+GROUP_BOXPLOT = BoxPlot de Grupos
+
+GROUP_VIOLIN = Violin de Grupos
+
+HEAT_MAP = Heatmap
+
+LINE = L\u00EDneas
+
+MEAN_DIFF = Acum. Relativos
+
+RADAR = Radar
+
+STACKED_BAR = Barras Apiladas
+
+VIOLIN = Violin
+
+btn.clear    = Borrar
+btn.enter    = Entrar
+btn.filter   = Aplicar filtro de fechas
+btn.group    = Grupo
+btn.remove   = Limpiar
+btn.rol      = Rol
+btn.type     = Tipo
+
+btnGroupMean = Estad\u00EDsticas de grupo(s)
+
+btnLegend = Leyenda
+
+btnMean = Estad\u00EDsticas generales
 
 chart.mean                = Media
 
@@ -55,23 +87,6 @@ error.userdata          = Error al recuperar los datos del usuario.
 header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
-
-html.btnActivitiesTable = Finalizaci\u00F3n Actividad
-html.btnBoxPlot         = Boxplot
-html.btnBoxPlotGroup    = BoxPlot de Grupos
-html.btnCalificaciones  = Calificaciones
-html.btnCalificationBar = Calificaciones %
-html.btnCumLine         = Acumulados
-html.btnGroupMean       = Estad\u00EDsticas de grupo(s)
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Leyenda
-html.btnLine            = L\u00EDneas
-html.btnMean            = Estad\u00EDsticas generales
-html.btnMeanDiff        = Acum. Relativos
-html.btnRadar           = Radar
-html.btnStackedBar      = Barras Apiladas
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin de Grupos
 
 label.activity                    = \u00DAltima conexi\u00F3n:
 label.categoryitem                = Categor\u00EDa/Item:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = Calificaci\u00
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
 
 menu.about          = Acerca de la aplicaci\u00F3n
+menu.changeconfig   = Cambiar configuraci\u00F3n
 menu.changesubject  = Cambiar Asignatura
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
