--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Clair
-btn.enter  = Entrer
-btn.filter = Apply dates filter
-btn.group  = Groupe
-btn.remove = Nettoyer
-btn.rol    = Rol
-btn.type   = Type
+ACTIVITIES_TABLE = Ach\u00E8vement d'activit\u00E9s
+
+BOXPLOT = Boxplot
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Grades
+
+GROUP_BOXPLOT = Boxplot de Groupe
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = Lignes
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = Bar Empil\u00E9e
+
+VIOLIN = Violin
+
+btn.clear    = Clair
+btn.enter    = Entrer
+btn.filter   = Apply dates filter
+btn.group    = Groupe
+btn.remove   = Nettoyer
+btn.rol      = Rol
+btn.type     = Type
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = L\u00E9gende
+
+btnMean = General Stats
 
 chart.mean                = Signifier
 
@@ -55,23 +87,6 @@ error.userdata          = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E
 header.passwordChangedMessage   = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
 header.passwordDateTime         = Date pr\u00E9c\u00E9dente mot de passe:
 header.passwordIncorrectMessage = Mot de passe incorrect
-
-html.btnActivitiesTable = Ach\u00E8vement d'activit\u00E9s
-html.btnBoxPlot         = Boxplot
-html.btnBoxPlotGroup    = Boxplot de Groupe
-html.btnCalificaciones  = Grades
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = L\u00E9gende
-html.btnLine            = Lignes
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = Bar Empil\u00E9e
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = Derni\u00E8re connexion:
 label.categoryitem                = Cat\u00E9gorie / article:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = Notes export\u
 log.event.zip_archive_of_folder_downloaded                      = Archive ZIP d'un dossier t\u00E9l\u00E9charg\u00E9e
 
 menu.about          = A propos de l'application
+menu.changeconfig   = Change configuration
 menu.changesubject  = Change le sujet
 menu.clearselection = Effacer la s\u00E9lection
 menu.edit           = modifier
