--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Chiaro
-btn.enter  = accedere
-btn.filter = Applica il filtro delle date
-btn.group  = Gruppo
-btn.remove = Ripulire
-btn.rol    = Rol
-btn.type   = genere
+ACTIVITIES_TABLE = Completamento attivit\u00E0
+
+BOXPLOT = Boxplot
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Gradi
+
+GROUP_BOXPLOT = Diagramma di Gruppo
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = Linee
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = A Barre In Pila
+
+VIOLIN = Violin
+
+btn.clear    = Chiaro
+btn.enter    = accedere
+btn.filter   = Applica il filtro delle date
+btn.group    = Gruppo
+btn.remove   = Ripulire
+btn.rol      = Rol
+btn.type     = genere
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = Leggenda
+
+btnMean = General Stats
 
 chart.mean                = Significare
 
@@ -55,23 +87,6 @@ error.userdata          = Errore durante il recupero dei dati dell'utente.
 header.passwordChangedMessage   = Rilevato \u00E8 stata modificata la password
 header.passwordDateTime         = Data precedente password:
 header.passwordIncorrectMessage = Password non corretta
-
-html.btnActivitiesTable = Completamento attivit\u00E0
-html.btnBoxPlot         = Boxplot
-html.btnBoxPlotGroup    = Diagramma di Gruppo
-html.btnCalificaciones  = Gradi
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Leggenda
-html.btnLine            = Linee
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = A Barre In Pila
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = Ultima connessione:
 label.categoryitem                = Categoria / Articolo:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = Esportate valu
 log.event.zip_archive_of_folder_downloaded                      = L'archivio zip della cartella \u00E8 stato scaricato
 
 menu.about          = Informazioni sull'applicazione
+menu.changeconfig   = Change configuration
 menu.changesubject  = Cambia materia
 menu.clearselection = Cancella selezione
 menu.edit           = modificare
