--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -1,11 +1,43 @@
 
-btn.clear  = Claro
-btn.enter  = Entrar
-btn.filter = Aplicar filtro de datas
-btn.group  = Grupo
-btn.remove = Limpar
-btn.rol    = Rol
-btn.type   = Tipo
+ACTIVITIES_TABLE = Conclus\u00E3o das atividades
+
+BOXPLOT = Boxplot
+
+CALIFICATION_BAR = Grades %
+
+CUM_LINE = Cumulative Log
+
+GRADE_REPORT_TABLE = Notas
+
+GROUP_BOXPLOT = Boxplot do Grupo
+
+GROUP_VIOLIN = Violin Groups
+
+HEAT_MAP = Heatmap
+
+LINE = Lines
+
+MEAN_DIFF = Relative Cum.
+
+RADAR = Radar
+
+STACKED_BAR = Bar Empilhados
+
+VIOLIN = Violin
+
+btn.clear    = Claro
+btn.enter    = Entrar
+btn.filter   = Aplicar filtro de datas
+btn.group    = Grupo
+btn.remove   = Limpar
+btn.rol      = Rol
+btn.type     = Tipo
+
+btnGroupMean = Group(s) Stats
+
+btnLegend = Lenda
+
+btnMean = General Stats
 
 chart.mean                = Significar
 
@@ -55,23 +87,6 @@ error.userdata          = Erro ao recuperar dados do usu\u00E1rio.
 header.passwordChangedMessage   = Detectado foi senha alterada
 header.passwordDateTime         = Senha da data anterior:
 header.passwordIncorrectMessage = Senha incorreta
-
-html.btnActivitiesTable = Conclus\u00E3o das atividades
-html.btnBoxPlot         = Boxplot
-html.btnBoxPlotGroup    = Boxplot do Grupo
-html.btnCalificaciones  = Notas
-html.btnCalificationBar = Grades %
-html.btnCumLine         = Cumulative Log
-html.btnGroupMean       = Group(s) Stats
-html.btnHeatmap         = Heatmap
-html.btnLegend          = Lenda
-html.btnLine            = Lines
-html.btnMean            = General Stats
-html.btnMeanDiff        = Relative Cum.
-html.btnRadar           = Radar
-html.btnStackedBar      = Bar Empilhados
-html.btnViolin          = Violin
-html.btnViolinGroup     = Violin Groups
 
 label.activity                    = \u00DAltima conex\u00E3o:
 label.categoryitem                = Categoria / Item:
@@ -558,6 +573,7 @@ log.event.xml_grade_exported                                    = Avalia\u00E7\u
 log.event.zip_archive_of_folder_downloaded                      = Foi descarregado um ficheiro ZIP da pasta
 
 menu.about          = Sobre a aplica\u00E7\u00E3o
+menu.changeconfig   = Change configuration
 menu.changesubject  = Mudar de assunto
 menu.clearselection = Sele\u00E7\u00E3o clara
 menu.edit           = Editar
