Added Configuration properties

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -586,7 +586,7 @@ menu.saveall        = Desa-ho tot com a ...
 menu.savechart      = Desa el gr\u00E0fic com ...
 menu.update         = Update course
 
-message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori ./export.
+message.export_csv_success = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
 
 module.assign      = Assignaci\u00F3
 module.book        = Llibre
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Taller
 
-tab.component    = Components
-tab.coursemodule = M\u00F2duls del curs
-tab.event        = Esdeveniments
-tab.grades       = Graus
-tab.logs         = Registres
-tab.section      = Secci\u00F3
+tab.activityCompletion = Compleci\u00F3 de l'activitat
+tab.component          = Components
+tab.coursemodule       = M\u00F2duls del curs
+tab.event              = Esdeveniments
+tab.grades             = Graus
+tab.logs               = Registres
+tab.section            = Secci\u00F3
 
 text.all                = Tots
 text.betweendates       = Between {0} and {1} 
