--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -586,7 +586,7 @@ menu.saveall        = Alles speichern unter ..
 menu.savechart      = Grafik speichern unter ...
 menu.update         = Update course
 
-message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis ./export.
+message.export_csv_success = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
 module.assign      = Zuordnung
 module.book        = Buch
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Werkstatt
 
-tab.component    = Komponenten
-tab.coursemodule = Kursmodule
-tab.event        = Veranstaltungen
-tab.grades       = Noten
-tab.logs         = Protokolle
-tab.section      = Abschnitt
+tab.activityCompletion = Aktivit\u00E4tsabschluss
+tab.component          = Komponenten
+tab.coursemodule       = Kursmodule
+tab.event              = Veranstaltungen
+tab.grades             = Noten
+tab.logs               = Protokolle
+tab.section            = Abschnitt
 
 text.all                = Alles
 text.betweendates       = Between {0} and {1}
