--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -586,7 +586,7 @@ menu.saveall        = Save all as...
 menu.savechart      = Save chart as...
 menu.update         = Update course
 
-message.export_csv_success = CSV export successfully. Review the files in the ./export directory.
+message.export_csv_success = CSV export successfully. Review the files in the directory: 
 
 module.assign      = Assignment
 module.book        = Book
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Workshop
 
-tab.component    = Components
-tab.coursemodule = Course Modules
-tab.event        = Events
-tab.grades       = Grades
-tab.logs         = Logs
-tab.section      = Sections
+tab.activityCompletion = Activity Completion
+tab.component          = Components
+tab.coursemodule       = Course Modules
+tab.event              = Events
+tab.grades             = Grades
+tab.logs               = Logs
+tab.section            = Sections
 
 text.all                = All
 text.betweendates       = Between {0} and {1}
