--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -586,7 +586,7 @@ menu.saveall        = Guardar todo como...
 menu.savechart      = Guardar gr\u00E1fico como...
 menu.update         = Actualizar curso
 
-message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio ./export.
+message.export_csv_success = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
 
 module.assign      = Tarea
 module.book        = Libro
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Taller
 
-tab.component    = Componentes
-tab.coursemodule = M\u00F3dulos curso
-tab.event        = Eventos
-tab.grades       = Calificaciones
-tab.logs         = Registros
-tab.section      = Secci\u00F3n
+tab.activityCompletion = Finalizaci\u00F3n Actividad
+tab.component          = Componentes
+tab.coursemodule       = M\u00F3dulos curso
+tab.event              = Eventos
+tab.grades             = Calificaciones
+tab.logs               = Registros
+tab.section            = Secci\u00F3n
 
 text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
