--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -586,7 +586,7 @@ menu.saveall        = Enregistrer tout sous ...
 menu.savechart      = Enregistrer le graphique sous ...
 menu.update         = Update course
 
-message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire ./export.
+message.export_csv_success = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
 module.assign      = Affectation
 module.book        = Livre
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Atelier
 
-tab.component    = Composants
-tab.coursemodule = Modules de cours
-tab.event        = \u00C9v\u00E9nements
-tab.grades       = Les notes
-tab.logs         = Les journaux
-tab.section      = Section
+tab.activityCompletion = Ach\u00E8vement d'activit\u00E9s
+tab.component          = Composants
+tab.coursemodule       = Modules de cours
+tab.event              = \u00C9v\u00E9nements
+tab.grades             = Les notes
+tab.logs               = Les journaux
+tab.section            = Section
 
 text.all                = Tout
 text.betweendates       = Between {0} and {1}
