--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -586,7 +586,7 @@ menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
 menu.update         = Update course
 
-message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory ./export.
+message.export_csv_success = Esportazione CSV con successo. Esaminare i file nella directory: 
 
 module.assign      = assegnazione
 module.book        = Libro
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = wiki
 module.workshop    = laboratorio
 
-tab.component    = componenti
-tab.coursemodule = Moduli del corso
-tab.event        = eventi
-tab.grades       = gradi
-tab.logs         = logs
-tab.section      = Sezione
+tab.activityCompletion = Completamento attivit\u00E0
+tab.component          = componenti
+tab.coursemodule       = Moduli del corso
+tab.event              = eventi
+tab.grades             = gradi
+tab.logs               = logs
+tab.section            = Sezione
 
 text.all                = Tutti
 text.betweendates       = Between {0} and {1}
