--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -586,7 +586,7 @@ menu.saveall        = Salvar tudo como ...
 menu.savechart      = Salvar gr\u00E1fico como ...
 menu.update         = Update course
 
-message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio ./export.
+message.export_csv_success = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 
 module.assign      = Tarefa
 module.book        = Livro
@@ -614,12 +614,13 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Oficina
 
-tab.component    = Componentes
-tab.coursemodule = M\u00F3dulos do curso
-tab.event        = Eventos
-tab.grades       = Notas
-tab.logs         = Logs
-tab.section      = Se\u00E7\u00E3o
+tab.activityCompletion = Conclus\u00E3o das atividades
+tab.component          = Componentes
+tab.coursemodule       = M\u00F3dulos do curso
+tab.event              = Eventos
+tab.grades             = Notas
+tab.logs               = Logs
+tab.section            = Se\u00E7\u00E3o
 
 text.all                = Todos
 text.betweendates       = Between {0} and {1}
